--- a/Clipper/User Interface/Base.lproj/Main.storyboard
+++ b/Clipper/User Interface/Base.lproj/Main.storyboard
@@ -58,15 +58,150 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Clipper" id="ijt-5i-HRh"/>
+                    <navigationItem key="navigationItem" title="Clipper" id="ijt-5i-HRh">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="dVI-OW-C54">
+                            <connections>
+                                <action selector="prepareNewLocation:" destination="BYZ-38-t0r" id="0Hz-la-EFI"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="addressLabel" destination="xDO-fH-XS7" id="gyl-tW-vkd"/>
                         <outlet property="mapView" destination="4St-8W-W8P" id="wVn-R5-AJX"/>
+                        <segue destination="Eqp-fv-bfG" kind="presentation" identifier="showInput" modalPresentationStyle="overCurrentContext" id="ww2-fa-w0a"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1011.5942028985507" y="-654.61956521739137"/>
+        </scene>
+        <!--Input Location Controller-->
+        <scene sceneID="bdD-S9-Zcm">
+            <objects>
+                <viewController id="Eqp-fv-bfG" customClass="InputLocationController" customModule="Clipper" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="k0q-pH-Yva">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0KU-mH-4Aj">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="258"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ghg-8r-q3x">
+                                        <rect key="frame" x="370" y="28" width="32" height="32"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="32" id="1Np-L7-NLC"/>
+                                            <constraint firstAttribute="height" constant="32" id="CIQ-00-cHe"/>
+                                        </constraints>
+                                        <state key="normal" image="iconClose"/>
+                                        <connections>
+                                            <action selector="closeView:" destination="Eqp-fv-bfG" eventType="touchUpInside" id="rGB-Jx-xHT"/>
+                                        </connections>
+                                    </button>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Localidade" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nnu-3c-CK6">
+                                        <rect key="frame" x="8" y="64" width="398" height="39"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="39" id="WtQ-O4-id7"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" weight="thin" pointSize="17"/>
+                                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="8my-zK-49J" userLabel="LocationText">
+                                        <rect key="frame" x="8" y="96" width="398" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="pNX-Ao-aRg"/>
+                                        </constraints>
+                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DZY-oe-Pie" userLabel="Separator1">
+                                        <rect key="frame" x="8" y="126" width="398" height="1"/>
+                                        <color key="backgroundColor" red="0.86274509803921573" green="0.86274509803921573" blue="0.86274509803921573" alpha="1" colorSpace="calibratedRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="1" id="47y-3b-5zt"/>
+                                        </constraints>
+                                    </view>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Referência" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TYB-MU-TsK" userLabel="Referencia">
+                                        <rect key="frame" x="8" y="134" width="398" height="39"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="39" id="Yhg-EF-OAF"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" weight="thin" pointSize="17"/>
+                                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="YOI-3r-2E3" userLabel="ReferenceText">
+                                        <rect key="frame" x="8" y="166" width="398" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="CI9-lB-c7z"/>
+                                        </constraints>
+                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RXx-36-QTo" userLabel="Separator2">
+                                        <rect key="frame" x="8" y="196" width="398" height="1"/>
+                                        <color key="backgroundColor" red="0.86274509803921573" green="0.86274509803921573" blue="0.86274509803921573" alpha="1" colorSpace="calibratedRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="1" id="alj-OF-gwd"/>
+                                        </constraints>
+                                    </view>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3yV-cQ-dd0">
+                                        <rect key="frame" x="322" y="210" width="80" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="80" id="hB9-CU-PAp"/>
+                                            <constraint firstAttribute="height" constant="30" id="uBa-53-9WL"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                        <state key="normal" title="Salvar"/>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="TYB-MU-TsK" firstAttribute="leading" secondItem="0KU-mH-4Aj" secondAttribute="leading" constant="8" id="0D8-Tu-fdO"/>
+                                    <constraint firstAttribute="trailing" secondItem="3yV-cQ-dd0" secondAttribute="trailing" constant="12" id="5Nz-9v-avB"/>
+                                    <constraint firstAttribute="bottom" secondItem="ghg-8r-q3x" secondAttribute="bottom" constant="198" id="5z0-A5-guA"/>
+                                    <constraint firstItem="RXx-36-QTo" firstAttribute="leading" secondItem="0KU-mH-4Aj" secondAttribute="leading" constant="8" id="6Um-Fa-RDX"/>
+                                    <constraint firstAttribute="trailing" secondItem="DZY-oe-Pie" secondAttribute="trailing" constant="8" id="FTv-0N-JlM"/>
+                                    <constraint firstItem="nnu-3c-CK6" firstAttribute="leading" secondItem="0KU-mH-4Aj" secondAttribute="leading" constant="8" id="Gju-Ao-YyM"/>
+                                    <constraint firstAttribute="trailing" secondItem="TYB-MU-TsK" secondAttribute="trailing" constant="8" id="O7O-gX-Ibj"/>
+                                    <constraint firstAttribute="trailing" secondItem="nnu-3c-CK6" secondAttribute="trailing" constant="8" id="RSu-8N-3YD"/>
+                                    <constraint firstAttribute="bottom" secondItem="3yV-cQ-dd0" secondAttribute="bottom" constant="18" id="YcG-8q-Ct3"/>
+                                    <constraint firstItem="nnu-3c-CK6" firstAttribute="top" secondItem="ghg-8r-q3x" secondAttribute="bottom" constant="4" id="Z2E-uz-wnc"/>
+                                    <constraint firstItem="8my-zK-49J" firstAttribute="leading" secondItem="0KU-mH-4Aj" secondAttribute="leading" constant="8" id="al8-E8-vgb"/>
+                                    <constraint firstItem="DZY-oe-Pie" firstAttribute="leading" secondItem="0KU-mH-4Aj" secondAttribute="leading" constant="8" id="cl2-XH-l6O"/>
+                                    <constraint firstAttribute="trailing" secondItem="YOI-3r-2E3" secondAttribute="trailing" constant="8" id="eds-a3-6WK"/>
+                                    <constraint firstItem="ghg-8r-q3x" firstAttribute="top" secondItem="0KU-mH-4Aj" secondAttribute="top" constant="28" id="gSg-zn-geT"/>
+                                    <constraint firstAttribute="trailing" secondItem="8my-zK-49J" secondAttribute="trailing" constant="8" id="goY-AO-6He"/>
+                                    <constraint firstAttribute="trailing" secondItem="ghg-8r-q3x" secondAttribute="trailing" constant="12" id="hY5-hb-hsd"/>
+                                    <constraint firstItem="8my-zK-49J" firstAttribute="top" secondItem="nnu-3c-CK6" secondAttribute="bottom" constant="-7" id="hnD-Sk-Gck"/>
+                                    <constraint firstItem="RXx-36-QTo" firstAttribute="top" secondItem="YOI-3r-2E3" secondAttribute="bottom" id="hrb-fY-eJQ"/>
+                                    <constraint firstItem="3yV-cQ-dd0" firstAttribute="top" secondItem="RXx-36-QTo" secondAttribute="bottom" constant="13" id="jC9-eq-iQd"/>
+                                    <constraint firstItem="YOI-3r-2E3" firstAttribute="top" secondItem="TYB-MU-TsK" secondAttribute="bottom" constant="-7" id="kc9-CS-Qcj"/>
+                                    <constraint firstItem="TYB-MU-TsK" firstAttribute="top" secondItem="DZY-oe-Pie" secondAttribute="bottom" constant="7" id="m8x-xm-0XK"/>
+                                    <constraint firstAttribute="trailing" secondItem="RXx-36-QTo" secondAttribute="trailing" constant="8" id="oPm-hW-IgS"/>
+                                    <constraint firstItem="YOI-3r-2E3" firstAttribute="leading" secondItem="0KU-mH-4Aj" secondAttribute="leading" constant="8" id="obu-Tf-aPS"/>
+                                    <constraint firstItem="DZY-oe-Pie" firstAttribute="top" secondItem="8my-zK-49J" secondAttribute="bottom" id="tsV-Mw-rX2"/>
+                                    <constraint firstAttribute="height" constant="258" id="zDY-GY-hrX"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="0KU-mH-4Aj" firstAttribute="trailing" secondItem="uqO-K9-p1M" secondAttribute="trailing" id="AJX-wJ-EfP"/>
+                            <constraint firstItem="0KU-mH-4Aj" firstAttribute="leading" secondItem="uqO-K9-p1M" secondAttribute="leading" id="Bqj-aS-nos"/>
+                            <constraint firstItem="0KU-mH-4Aj" firstAttribute="top" secondItem="k0q-pH-Yva" secondAttribute="top" id="bfq-JG-j3y"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="uqO-K9-p1M"/>
+                    </view>
+                    <connections>
+                        <outlet property="saveButton" destination="3yV-cQ-dd0" id="uu1-Zi-lvH"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="hEt-4e-D9h" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1844.9275362318842" y="-655.43478260869574"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="jha-bs-H6Q">
@@ -88,6 +223,8 @@
         </scene>
     </scenes>
     <resources>
+        <image name="iconClose" width="100" height="100"/>
         <image name="miraBoldRed" width="100" height="100"/>
     </resources>
+    <color key="tintColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
 </document>
