--- a/Clipper/User Interface/Base.lproj/Main.storyboard
+++ b/Clipper/User Interface/Base.lproj/Main.storyboard
@@ -109,17 +109,10 @@
                                                 <constraint firstItem="0hX-VZ-K3z" firstAttribute="top" secondItem="cmI-zs-OMh" secondAttribute="top" constant="5" id="Z35-qQ-Yo4"/>
                                             </constraints>
                                         </tableViewCellContentView>
-                                    </tableViewCell>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="9gh-j3-oSW">
-                                        <rect key="frame" x="0.0" y="91" width="414" height="44"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="9gh-j3-oSW" id="Jtq-ie-7pL">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                        </tableViewCellContentView>
+                                        <color key="backgroundColor" red="0.96078431372549022" green="0.96078431372549022" blue="0.96078431372549022" alpha="1" colorSpace="calibratedRGB"/>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="105" id="v2k-Ve-5ts" userLabel="Pants Cell">
-                                        <rect key="frame" x="0.0" y="135" width="414" height="105"/>
+                                        <rect key="frame" x="0.0" y="91" width="414" height="105"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="v2k-Ve-5ts" id="2Oc-JA-Yed">
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="105"/>
@@ -139,7 +132,7 @@
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="105" id="LTJ-so-ZBb" userLabel="Shirt Cell">
-                                        <rect key="frame" x="0.0" y="240" width="414" height="105"/>
+                                        <rect key="frame" x="0.0" y="196" width="414" height="105"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="LTJ-so-ZBb" id="AYc-gs-FWT">
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="105"/>
@@ -159,7 +152,7 @@
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="102" id="Icq-tT-jKm" userLabel="Command Cell">
-                                        <rect key="frame" x="0.0" y="345" width="414" height="102"/>
+                                        <rect key="frame" x="0.0" y="301" width="414" height="102"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Icq-tT-jKm" id="RtJ-3b-qVB">
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="102"/>
@@ -179,6 +172,32 @@
                                                 <constraint firstAttribute="bottomMargin" secondItem="eNE-Ll-oqe" secondAttribute="bottom" constant="12" id="Ri6-LD-bgZ"/>
                                                 <constraint firstAttribute="trailingMargin" secondItem="eNE-Ll-oqe" secondAttribute="trailing" constant="25" id="Xr0-5E-cET"/>
                                                 <constraint firstItem="eNE-Ll-oqe" firstAttribute="top" secondItem="RtJ-3b-qVB" secondAttribute="topMargin" constant="13" id="wXY-4w-MDP"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="IZ7-zm-bUL" userLabel="Remove Cell">
+                                        <rect key="frame" x="0.0" y="403" width="414" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="IZ7-zm-bUL" id="u7T-KK-1PM">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CbU-4t-CsE">
+                                                    <rect key="frame" x="20" y="7" width="374" height="30"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                                    <state key="normal" title="Remover localidade"/>
+                                                    <connections>
+                                                        <action selector="removeAnnotation:" destination="KYG-ie-Zo9" eventType="touchUpInside" id="J2R-j6-iHX"/>
+                                                    </connections>
+                                                </button>
+                                            </subviews>
+                                            <color key="tintColor" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <constraints>
+                                                <constraint firstAttribute="bottom" secondItem="CbU-4t-CsE" secondAttribute="bottom" constant="7" id="1bN-hz-hbj"/>
+                                                <constraint firstItem="CbU-4t-CsE" firstAttribute="leading" secondItem="u7T-KK-1PM" secondAttribute="leading" constant="20" id="7FB-Nu-Y5m"/>
+                                                <constraint firstAttribute="trailing" secondItem="CbU-4t-CsE" secondAttribute="trailing" constant="20" id="dYU-9d-qjr"/>
+                                                <constraint firstItem="CbU-4t-CsE" firstAttribute="top" secondItem="u7T-KK-1PM" secondAttribute="top" constant="7" id="uSG-B6-lRl"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
