--- a/Clipper/User Interface/Base.lproj/Main.storyboard
+++ b/Clipper/User Interface/Base.lproj/Main.storyboard
@@ -44,7 +44,7 @@
                                 <rect key="frame" x="157" y="318" width="100" height="100"/>
                             </imageView>
                         </subviews>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="QNf-wt-Tsp" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Iga-mD-fdq"/>
                             <constraint firstItem="xCv-KC-Emb" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="SCT-Xj-PPF"/>
